--- a/style.css
+++ b/style.css
@@ -52,3 +52,14 @@ dt{
 dd{
     font-family: monospace;
 }
+
+.column {
+    float: left;
+    margin-left: 10%;
+  }
+
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
