--- a/css/movie.css
+++ b/css/movie.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url('./background.png');
+    background-image: url('../img/background.png');
     background-repeat: repeat;
 }
 
@@ -17,7 +17,7 @@ body {
 
 
 div.banner {
-    background-image: url('./bannerbg.png');
+    background-image: url('../img/bannerbg.png');
     background-repeat: repeat;
     text-align: center;
 }
@@ -40,7 +40,7 @@ h1 {
 }
 
 .rotten {
-    background-image: url('./rbg.png');
+    background-image: url('../img/rbg.png');
     background-repeat: repeat;
     border-top-left-radius: 15px;
 }
